# docker-nginx-gunicorn-fastapi

./: .backend.env.template  .nginx.env.template  Makefile  README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  exception.py  logger.py  main.py  router.py  setup.py
backend/scripts/: entrypoint.sh  gunicorn.conf.sh
src/: index.html
src/static/css/: style.css
src/static/js/: script.js
